Cours_Tris_et_fonctionsEncours

--- a/Les_transparent/corps/tris.tex
+++ b/Les_transparent/corps/tris.tex
@@ -1,8 +1,46 @@
 
-\section{Les tableaux}
+\section{Rappel :}
 
 
 \subsection{Déclaration}
+
+
+\begin{frame}
+  \frametitle{Les types intégrés}
+
+
+\begin{itemize}
+\item Les types simples : 
+	\begin{itemize}
+		\item Entiers signés (\emph{int}), Réels (IEEE 754) (\emph{float}) et  Complexes (\emph{complex}), Booléens (\emph{bool})
+	\end{itemize}
+\item Les types composites (containers): 
+		\begin{itemize}
+		  \item \textbf{Les séquences} : Chaînes de caractères (\emph{str}) ;		Listes (\emph{list}) et  Tuples (\emph{tuple})
+			\item \textbf{Les maps }(hashs) : Dictionnaires (\emph{dict})
+			\item \textbf{Les ensembles} : le type \emph{set} et le type \emph{frozenset}
+		\end{itemize}
+ \end{itemize}
+\pause
+\begin{alertblock}
+ 
+ \begin{itemize}
+	 \item Pas de type tableau (array) en Python
+ \end{itemize}
+	 
+\end{remarques}
+
+\end {frame}
+
+
+
+
+
+
+
+
+
+
 
 
 
