fonction et modules

--- a/Les_transparent/python4.tex
+++ b/Les_transparent/python4.tex
@@ -44,7 +44,9 @@
   \end{frame}
 }
 
-
+\newlength\dunder
+\settowidth{\dunder}{\_}
+\newcommand{\twound}{\rule{2\dunder}{0.4pt}}
 %%%
 \input{fonctions}
 
