--- a/Les_transparent/corps/fonctions.tex
+++ b/Les_transparent/corps/fonctions.tex
@@ -96,378 +96,581 @@
 
 \end{frame}
 
+\begin{frame}
+  \frametitle{Lambda fonctions}
+  
+	\begin{itemize}
+		\item Pour créer une fonction \textsl{anonyme} contenant une seule instruction (expression)
+		\item Syntaxe : \texttt{lambda arguments... : expression}
+	\end{itemize}
+	\pause
+  \begin{exemple}
+    \begin{semiverbatim}
+    \vspace{-0.5cm}		
+		\textcolor[rgb]{0.24,0.7,0.44}{\# La lambda fonction }
+		
+      somProd = \emph{lambda} n1, n2: (n1+n2, n1*n2)
+     
+		\uncover<3>{
+     \textcolor[rgb]{0.24,0.7,0.44}{\# est équivalente à :}
+		
+     \emph{def} somProd(n1, n2):
+		
+     \hspace{1cm} return (n1+n2, n1*n2)
+
+     \textcolor[rgb]{0.24,0.7,0.44}{\# Dans les 2 cas :}}
+		
+     somProd(3, 10)    \textcolor[rgb]{0.24,0.7,0.44}{\# => (13, 30) }
+		\end{semiverbatim}
+  \end{exemple}
+
+\end{frame}
 
 
 
-
-\subsection{Paramètres par défaut}
+\subsection{Valeurs par défaut des arguments}
 
 \begin{frame}[fragile]
-  \frametitle{Paramètres formels/paramètres effectifs}
-  \begin{exemple}[paramètre formel/paramètre effectif]
-    \begin{lstlisting}[frame=none]
-      public void m1(int parametreFormel) {
-        int i = parametreFormel + 22;
-        System.out.println(i);
-      }
-      public void m2() {
-        int parametreEffectif = 20;
-        m1(parametreEffectif);
-        m1(20);
-      }
+ \frametitle{Argument(s) par défaut}
+ 
+	
+	\begin{itemize}
+		\item Objectif : attribuer des valeurs par défaut aux arguments 
+		\item <2> Attention : les paramètres positionnels doivent apparaitre avant les paramètres nommés 
+		  
+	\end{itemize}
+	\begin{exemple}[valeur par défaut]
+  \begin{lstlisting}[frame=none]
+	def hello(name, lang='English'):
+      # name est obligatoire
+	      if lang=='English':
+         print('Hello ', name)
+      elif lang=='French':
+        print('Bonjour ', name)
+      
+hello('Claire','French') # => Bonjour Claire
+hello(lang ='French', name = 'Claire') 
+hello('Claire') # => Hello Claire
+
+
     \end{lstlisting}
   \end{exemple}
 
 \end{frame}
 
 
-\begin{frame}
-  \frametitle{Passage de paramètres}
-  \only<1,3->{
-  Deux types de passages de paramètres :
-  \begin{itemize}
-  \item<1-> paramètres de type simple : passage par valeur
-  \item<1-> paramètres de type composite : passage par variable
-  \item<3-> Résultat :
-    \begin{semiverbatim}
-      autreMethode : 0
 
-      dans uneMethode : 1
-
-      fin de autreMethode : 0
-    \end{semiverbatim}
-  \end{itemize}
-}
-  \only<2>{\small
-  \begin{exemple}
-    \begin{semiverbatim}
-    public void uneMethode(int param) \{
-
-    \hspace{1cm}param++;
-
-    \hspace{1cm}System.out.println("dans uneMethode : "+param);
-
-    \}
-
-    public void autreMethode() \{
-
-    \hspace{1cm}int i=0;
-
-    \hspace{1cm}System.out.println("autreMethode : "+i);
-
-    \hspace{1cm}uneMethode(i);
-
-    \hspace{1cm}System.out.println("fin de autreMethode : "+i);
-
-    \}    
-    \end{semiverbatim}
+\begin{frame}[fragile]
+\frametitle{Arguments par défaut}
+\begin{remarque}
+		\begin{itemize}
+		  \item L'ordre des paramètres avec valeur par défaut n'est pas important 
+			\item les arguments par défaut sont optionnels
+		\end{itemize}
+\end{remarque}
+	\begin{exemple}[valeur par défaut]
+  \begin{lstlisting}[frame=none]
+	def generer(min=0, max =100):
+	    """ renvoie une liste d'entiers générés
+    aléatoirement entre min et max  """
+    < Corps de la fonction>
+ # exemples d'appel			
+ l1 = generer (max=200, min=20) 
+ # equvalent l1 = generer (20, 200) 
+ l2 = generer (max= 10)
+  \end{lstlisting}
   \end{exemple}
-  }
 \end{frame}
 
-\begin{frame}
-  \frametitle{Paramètres de type composite}
 
-  \begin{exemple}[Paramètres de type composite]
+\begin{frame}[fragile]
+\frametitle{Arguments par défaut}
+\begin{remarque}
+		\begin{itemize}
+		 \item L'objet utilisé comme valeur par défaut du paramètre est toujours le même
+			\begin{itemize}
+				\item \textcolor[rgb]{1,0,0}{Il reste dangereux d'utiliser des objets modifiables comme valeur par défaut }
+			\end{itemize}
+		\end{itemize}
+			\end{remarque}
+	\begin{alertblock}{Exemple : Valeur d'un argument}
+  \begin{semiverbatim}
+	def aj(b, liste=[1,2]):
+    liste.append(b)
+    return liste
+  
+	lst=aj(5)   \# \only<1>{lst = ?}\only<2-3>{lst = [1, 2, 5]}
+	lst1=aj(6)  \# \only<1-2>{ lst1 = ?, lst = ?} \only<3>{lst1 = lst = [1, 2, 5, 6]}
+	\end{semiverbatim}
+
+  \end{alertblock}
+
+\end{frame}
+\begin{frame}[fragile]
+\frametitle{Arguments par défaut}
+\begin{remarque}
+		\begin{itemize}
+		 \item L'objet utilisé comme valeur par défaut du paramètre est toujours le même
+			\begin{itemize}
+				\item \textcolor[rgb]{1,0,0}{Il reste dangereux d'utiliser des objets modifiables comme valeur par défaut }
+			\end{itemize}
+		\end{itemize}
+			\end{remarque}
+	\begin{exemple}[Solution]
+  \begin{lstlisting}[frame=none]
+	def ajout(b, liste=None):
+    if liste == None :
+		       liste = [1,2]
+	    liste.append(b)
+    return liste
+ lst=aj(5)  # lst = [1, 2, 5]
+ lst1=aj(6) # lst1 = [1, 2, 6];lst = [1, 2, 5]
+\end{lstlisting}
+
+  \end{exemple}
+
+\end{frame}
+
+\subsection{Passage de paramètres}
+
+\begin{frame}[fragile]
+  \frametitle{Passage de paramètres}
+	
+	
+	\begin{itemize}[<+->]
+		
+  \item Deux types de passages de paramètres :
+  \begin{itemize}
+  \item Passage par valeur (copie de donnée) : paramètres de type non modifiable. Ex. les types simples, les tuples, les chaînes ...
+	\item Passage par variable : paramètres de type modifiable. 
+	\end{itemize}
+\end{itemize}
+%{\small
+  \begin{exemple}[Passage par valeur/variable]<4-6>
+    \only<4-6>{
+		\begin{semiverbatim}
+		\vspace{-0.5cm}
+		\emph{def} ajoutElem(liste, elem):
+		
+		 \hspace{1cm}   liste.append(elem)
+		
+		 \hspace{1cm} 	elem = 'quatre' \textcolor[rgb]{0.24,0.7,0.44}{\# elem est modifié}
+		
+		 \hspace{1cm}    \textcolor[rgb]{0.24,0.7,0.44}{\# Note : Pas de return !}
+        
+	lst=['un'] 
+	
+	el='deux'
+	
+	ajoutElem(lst, el)
+	
+	print(el)  \textcolor[rgb]{0.24,0.7,0.44}{\# => el = \only<5-6> {'deux' }}
+	
+	print(lst) \textcolor[rgb]{0.24,0.7,0.44}{\# => lst = \only<6> {['un', 'deux']}}
+	\end{semiverbatim}
+	}
+   \end{exemple}
+  
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Passage par variable}
+
+  \begin{exemple}[Passage par variable : type modifiable]
     \begin{semiverbatim}
+		\vspace{-1cm}
       \only<1>{
-      public void modifieVariable1(int tableau[]) \{
+		\emph{def} ajoutsupp(liste, elem):
+		    liste.append(elem)
+		    liste[0]='dix'
+		\emph{def} ajoutsupp1(liste, elem):
+		    liste = ['cinq, six']
+		    liste.append(elem)
+		    liste[0]='douze'
+	lst=['un'] ; el='deux'
+	ajoutsupp(lst, el)
+	print(lst) \textcolor[rgb]{0.24,0.7,0.44}{\# => lst = ?}
+	ajoutsupp1(lst, el)
+	print(lst)  \textcolor[rgb]{0.24,0.7,0.44}{\# => lst = ? }
+	}
+	\end{semiverbatim}
+	
 
-      \hspace{1cm}tableau[0]=42;
-
-      \}
-
-      public void modifieVariable2(int tableau[]) \{
-
-      \hspace{1cm}tableau = new int[10];
-
-      \hspace{1cm}tableau[0]=3;
-
-      \}}
-      \only<2>{public void utiliseMethode() \{
-
-      \hspace{1cm}int tab[] = new int[5];
-
-      \hspace{1cm}tab[0] = 1;
-
-      \hspace{1cm}System.out.println(tab.length+" "+tab[0]);
-
-      \hspace{1cm}modifieVariable1(tab);
-
-      \hspace{1cm}System.out.println(tab.length+" "+tab[0]);
-
-      \hspace{1cm}modifieVariable2(tab);
-
-      \hspace{1cm}System.out.println(tab.length+" "+tab[0]);
-
-      \}}
-    \end{semiverbatim}
-  \only<3>{
+  \only<2>{
 Résultat de l'exécution :
     \begin{semiverbatim}
-      5 1
-
-      5 42
-
-      5 42
+    >>> 
+		
+		['dix', 'deux']
+		
+		['dix', 'deux']
+		
+		>>> 
     \end{semiverbatim}
   }
 
   \end{exemple}
 \end{frame}
-
-\subsection{Règles de portée}
-
+\subsection{Portée de variables}
 \begin{frame}
-  \frametitle{Portée}
-  \begin{itemize}
-  \item Variables locales de la méthode : portée limitée à la méthode
-  \item Paramètres : portée limitée à la méthode
+  \frametitle{Portée de variables}
+	 \only<1>{
+	\begin{defi}
+	  La portée est le périmètre dans lequel un nom (de variable, fonction...) est connu (visible) et utilisable
+		\end{defi}
+  
+	\begin{itemize}
+	\item \textbf{Variables globales} (espace des noms globaux) d'un programme : portée limitée à l'intérieur du programme et toutes les fonctions invoquées
+	\item \textbf{Variables locales} (espace des noms locaux) de la fonction  : portée limitée à la fonction
+   
+	 \begin{itemize}
+		 \item Paramètres d'une fonction : portée limitée à la fonction et celle invoquées depuis son corps
+	 \end{itemize}
   \end{itemize}
-
-  \begin{exemple}[Portée]
+  }
+	\only<2-5>{
+  \begin{exemple}[Visibilité de variables]
     \begin{semiverbatim}
-      public void methodeTest(int parametre) \{
-
-      \hspace{1cm}int nombre = 10;
-
-      \}
+		\vspace{-.5cm}	
+		def maville():
+		
+		\hspace{1cm}	 ville = 'Brest'  \textcolor[rgb]{0.24,0.7,0.44}{\# variable locale}
+			
+	  \hspace{1cm}   print (ville, cp\only<4->{, pays})
+		
+		\hspace{1cm} \textcolor[rgb]{0.24,0.7,0.44}{\# cp=29200 variable globale vue par la fct}
+    
+		\uncover<4->{ville = 'Quimper' ; pays = 'France'}
+    
+		cp = 29200 \textcolor[rgb]{0.24,0.7,0.44}{\# variable globale}
+				
+	  maville() \textcolor[rgb]{0.24,0.7,0.44}{\# =>  affiche 'Brest 29200 \only<3->{France}'}
+		
+		\textcolor[rgb]{0.24,0.7,0.44}{\only<4->{\# ville = 'Brest' => var. loc masquant var. glob}}
+		
+    \only<3,5>{print(ville)}\only<3>{ \textcolor[rgb]{0.24,0.7,0.44}{\#  => NameError}} \only<5>{\textcolor[rgb]{0.24,0.7,0.44}{ \#  => 'Quimper'}}
     \end{semiverbatim}
   \end{exemple}
+	}
 \end{frame}
 
 
-\subsection{Notion de pile d'appel}
+
+\begin{frame}[fragile]
+  \frametitle{Variables globales/locales}
+  
+	\begin{remarques}
+	\begin{itemize}[<+->]
+	\item La recherche d'un nom débute dans l'espace de noms le plus intérieur, puis s'étend jusqu'à l'espace de nom global
+  	\begin{itemize}
+		\item Les variables globales sont visibles dans les fonctions appelées mais on ne peut les réaffectées
+		\item Le contenu d'une variable golobale est modifiable si elle est mutable (modifiable).
+		\item Les variables locales d'une fonction ne sont pas visibles dans les niveaux supérieurs
+		\item Les fonctions peuvent modifier des variables globales avec l'instruction \emph{global} 
+		\end{itemize}
+		\item La fonction \emph{globals()} retourne le dictionnaire des objets globaux. \\
+	
+		\item La fonction \emph{locals()} retourne la liste des objets l'espace local en cours
+   \end{itemize}
+  \end{remarques}
+	
+\end{frame}
+
+
+
+
+
+
+\begin{frame}[fragile]
+  \frametitle{Variables globales/locales}
+
+ \begin{exemple}[Modification d'une variable globale en local]
+    \begin{semiverbatim}
+		\emph{def} noise ():
+		    i = np.random.randint(0, len(tab) -1)
+		    j = np.random.randint(0, len(tab) -1)
+		    \textcolor[rgb]{0.2,0.8,0.2}{\# modification de la varibale globale tab}
+		    tab[i], tab[j] = tab[j], tab[i] 
+		
+		tab = list(range(10)) \textcolor[rgb]{0.2,0.8,0.2}{\# variable globale}
+		print(tab) \pause \textcolor[rgb]{0.2,0.8,0.2}{\# [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]}\pause
+		noise()
+		print(tab) \pause \textcolor[rgb]{0.2,0.8,0.2}{\# [0, 1, 8, 3, 4, 5, 6, 7, 2, 9]}
+		
+				
+ \end{semiverbatim}
+  \end{exemple}
+%}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Variables globales/locales}
+ \begin{exemple}[Variable globale]
+    \begin{semiverbatim}
+		\emph{def} maville():
+		    \emph{global} code, ville
+		    ville = 'Brest'
+		    code ='29200'
+		    print (ville, code)
+				
+				
+		ville, code = 'Quimper', '29000'
+		print(ville, code) \pause \textcolor[rgb]{0.24,0.7,0.44}{# => Quimper 29000}
+		maville()  \pause \textcolor[rgb]{0.24,0.7,0.44}{# => Brest 29200}
+		print(ville, code) \pause \textcolor[rgb]{0.24,0.7,0.44}{# => Brest 29200}
+ \end{semiverbatim}
+  \end{exemple}
+%}
+\end{frame}
+
+%\subsection{Notion de pile d'appel}
+%
+%\begin{frame}
+  %\frametitle{Pile d'appel}
+  %\begin{itemize}[<+->]
+  %\item Zone de mémoire
+  %\item Contient :
+    %\begin{itemize}
+    %\item<3-|alert@8-9> paramètres
+    %\item<4-|alert@10> adresse de retour
+    %\item<5-|alert@11> variables locales
+    %\end{itemize}
+  %\item<6-> Fonctionnement lors de l'appel d'une fonction
+  %\end{itemize}
+%
+  %\uncover<7->{
+  %\begin{tabular}{ll}
+    %\begin{minipage}{0.8\linewidth}
+    %\begin{semiverbatim}
+      %def fct({\color<8>{red} a}, {\color<9>{red} b}) 
+%
+      %\hspace{1cm}{\color<11>{red} i = 0}
+%
+     %
+%
+      %fct({\color<8>{red}2}, {\color<9>{red}1.5});
+    %\end{semiverbatim}
+  %\end{minipage}&
+  %\begin{minipage}{0.15\linewidth}
+  %\begin{tabular}{|r|}
+    %\hline
+    %\uncover<11>{i}\\
+    %\hline
+    %\uncover<10->{0x1E3C85}\\
+    %\hline
+    %\uncover<9->{1.5}\\
+    %\hline
+    %\uncover<8->{2}\\
+    %\hline
+  %\end{tabular}
+  %\end{minipage}
+%\end{tabular}
+%}
+%\end{frame}
+
+\section{Les modules}
+
+
 
 \begin{frame}
-  \frametitle{Pile d'appel}
-  \begin{itemize}[<+->]
-  \item Zone de mémoire
-  \item Contient :
-    \begin{itemize}
-    \item<3-|alert@8-9> paramètres
-    \item<4-|alert@10> adresse de retour
-    \item<5-|alert@11> variables locales
-    \end{itemize}
-  \item<6-> Fonctionnement lors de l'appel d'une méthode
-  \end{itemize}
-
-  \uncover<7->{
-  \begin{tabular}{ll}
-    \begin{minipage}{0.8\linewidth}
+  \frametitle{Modules, bibiothèques, librairies}
+   
+	 \begin{itemize}[<+->]
+	   \item Un fichier source Python constitue un module 
+		 \item Objectif : regrouper des définitions de fonctions et de classes dans un fichier Python utilisable dans d'autres programmes\\
+		Exemple : un fichier regroupant les fonctions de tris.
+		 \item On importe le contenu d'un module dans le module courant avec la commande \emph{import }
+		\item La variable d'environnement PATHPYTHON liste les répertoires dans lesquels l'interpréteur cherche les modules/packages
+	 \end{itemize}
+	\pause
+ \begin{exemple}[Path Python]
+{\small
     \begin{semiverbatim}
-      public void methode({\color<8>{red}int a}, {\color<9>{red}double b}) \{
-
-      \hspace{1cm}{\color<11>{red}int i};
-
-      \}
-
-      methode({\color<8>{red}2}, {\color<9>{red}1.5});
-    \end{semiverbatim}
-  \end{minipage}&
-  \begin{minipage}{0.15\linewidth}
-  \begin{tabular}{|r|}
-    \hline
-    \uncover<11>{i}\\
-    \hline
-    \uncover<10->{0x1E3C85}\\
-    \hline
-    \uncover<9->{1.5}\\
-    \hline
-    \uncover<8->{2}\\
-    \hline
-  \end{tabular}
-  \end{minipage}
-\end{tabular}
+		\vspace{-.5cm}
+		>>> import sys \only<7>{as alias}
+		
+		>>> \only<6>{sys.path}\only<7>{alias.path}
+		
+		['','C:\\python-3.3.5.amd64\\Lib\\idlelib','C:\\python-
+		3.3.5.amd64\\lib\\site-packages\\Pythonwin', \dots]
+		
+	  >>> \only<6>{sys.path}\only<7>{alias.path}.append('chemin de module')	
+ \end{semiverbatim}
 }
-\end{frame}
-
-\section{Retour sur les tableaux}
-
-
-\subsection{Recherche dichotomique}
-
-\begin{frame}
-  \frametitle{Recherche par dichotomie}
-  \begin{itemize}[<+->]
-  \item Exemple : recherche d'un élément dans un tableau trié
-  \item Principe : comparer l'élément avec la valeur médiane
-  \item puis recommencer dans le sous tableau contenant l'élément
-  \end{itemize}
-
-
-    \begin{center}
-      \begin{tabular}{|l|l|l|l|l|}
-        \hline
-        {\color<3-4>{blue}1} & {\color<3>{blue}\color<4>{red}2} & {\color<2>{red}\color<3-4>{blue}3} & 4 & 5\\
-        \hline
-      \end{tabular}
-    \end{center}
-
-\pause Complexité : \pause $\Theta(\log n)$
-\end{frame}
-
-\subsection{Diviser pour régner}
-
-\begin{frame}
-  \begin{itemize}[<+->]
-  \item Principe : décomposer le problème en sous problèmes (sous ensemble des
-    données)
-  \item résoudre les sous problèmes (éventuellement en redécoupant)
-  \item puis fusionner les résultats
-  \item Exemples~:
-    \begin{itemize}
-    \item tri par partition/fusion
-    \item tri rapide
-    \end{itemize}
-  \end{itemize}
-\end{frame}
-
-
-\section{Utilisation des classes de l'API Java}
-
-
-\subsection{Quelques classes de l'API}
-
-
-\begin{frame}
-  \frametitle{Random}
-
-  Classe \emph{Random} : génération de nombres aléatoires.
-
-  Deux étapes :
-  \begin{itemize}
-  \item<2-> Créer une variable de type \emph{Random}
-  \item<3-> Utiliser la variable
-  \end{itemize}
-
-  \begin{exemple}
-    \begin{semiverbatim}
-      {\color<2>{red}Random alea = new Random();}
-
-      int i = {\color<3>{red}alea.nextInt(100)};
-
-      double x = {\color<3>{red}alea.nextDouble()};
-    \end{semiverbatim}
   \end{exemple}
+
+%}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Integer/Double/String}
-  \begin{semiverbatim}
-    int i = Integer.MIN\_VALUE;
-
-    int j = Integer.parseInt(\only<1>{"123"}\only<2->{args[0]});
-  \end{semiverbatim}
-  \pause\pause
-  \begin{semiverbatim}
-    double x = Double.POSITIVE\_INFINITY;
-
-    double y = Double.parseDouble(args[1]);
-  \end{semiverbatim}
-  \pause
-  \begin{semiverbatim}
-    String s = "abcde";
-
-    boolean b = s.equals(args[2]);
-  \end{semiverbatim}
-  \pause
-  Plus d'informations : consulter la doc de l'API Java.
-\end{frame}
-
-\begin{frame}
-  \frametitle{LinkedList}
-  \begin{itemize}
-  \item Objectif~: manipuler des collections de données
-  \item[$\simeq$] tableaux de taille variable
-  \end{itemize}
-
-  \pause
-  Opérations de base~:
-  \begin{itemize}[<+->]
-  \item Créer une collection (ex. \emph{LinkedList})
-  \item Ajouter un élément
-  \item Supprimer un élément
-  \item Rechercher un élément
-  \end{itemize}
-
-  \begin{exemple}
+  \frametitle{Modules, bibiothèques, librairies}
+   
+	 \begin{itemize}[<+->]
+	   \item Importer une partie d'un module
+		\item $=>$ pas besoin de préfixer les identifiants par le nom du module
+		
+		
+		\end{itemize}
+ \begin{exemple}[Path Python]
+{\small
     \begin{semiverbatim}
-      \only<1-2>{LinkedList l = new LinkedList();}
-      \only<3>{l.add(42);}
-      \only<4>{l.remove(0);}
-      \only<5>{if(l.contains(42)) ...}
-      \only<6>{import java.util.LinkedList;}
-      \only<7>{import java.util.*;}
-    \end{semiverbatim}
+		\vspace{-.5cm}
+		>>> from sys import path
+		
+		>>> path  
+		
+		['','C:\\python-3.3.5.amd64\\Lib\\idlelib','C:\\python-
+		3.3.5.amd64\\lib\\site-packages\\Pythonwin', \dots]
+		
+	  >>> path.append('chemin de module')	
+ \end{semiverbatim}
+}
   \end{exemple}
+
+%}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Stéréotypage des collections}
-  Depuis Java 1.5 : possibilité de stéréotyper les collections :
-  \begin{itemize}
-  \item Permet de vérifier la cohérence des types
-  \item Évite certains \emph{cast}
-  \end{itemize}
+  \frametitle{Importer un module}
+   \begin{alertblock}{Importer tout un module}
+	    \texttt{from module importe * }
+			\begin{itemize} [<+->]
+				\item Attention : Importe l'ensemble du contenu d'un module (tous les identifiants de l'espace de noms du module) à l'exception des noms commençant par '\_'
+				\item $=>$ masquage de noms déjà définis\\
+				Exemple : \\
+				\texttt{from os import *}  \textcolor[rgb]{0.2,0.8,0.2}{\verb!\#! masque la fonction open()}
+			\end{itemize}
+	\end{alertblock}
+\end{frame}
 
-  \begin{exemple}
-    \begin{semiverbatim}
-      LinkedList\textcolor{blue}{<Integer>} l = new LinkedList\textcolor{blue}{<Integer>}();
+\begin{frame}
+  \frametitle{Importer un module}
 
-      l.add(42);
+	
+\begin{remarques}
+	
+	\begin{itemize}[<+->]
+		
+		\item Un module n'est importé qu'une seule fois par l'interpréteur et mis en cache dans \texttt{sys.modules} pour être utilisé.
+		\item Pour recharger un module : \\
+		\texttt{from imp import reload}\\
+		\texttt{reload(module)}
+		
+	\item Lors de l'importation d'un module, le code présent dans ce module est exécuté.  
+	
+	\begin{itemize}
+		\item Utilisation  corps principal du programme via la variable \verb!\_\kern-.14ex\_name\_\kern-.14ex\_ 
+		
+		Utilisation : 
+		if \twound{name}\twound{} == '\twound{main}\twound{}':!
+	\end{itemize}
+	\end{itemize}
+\end{remarques}
 
-      \textcolor{red}{l.add(13.2);}
-
-      int i = l.get(0);
-
-      Integer j = l.get(1);
-
-      System.out.println(l);
-    \end{semiverbatim}
-  \end{exemple}
+%}
 \end{frame}
 
 
-\begin{frame}
-  \frametitle{Math}
 
-  Classe particulière : ne pas créer d'objet de type \emph{Math}.
 
-  Contenu :\pause
-  \begin{itemize}[<+->]
-  \item Constantes
-  \item Valeur absolue
-  \item Fonctions trigonométriques
-  \item Fonctions d'arrondis
-  \end{itemize}
+\begin{frame} [fragile]
+  \frametitle{Utilisation de modules}
+	
+	\begin{exemple}[Les modules]
+	{\small
+  \begin{lstlisting}[frame=none]
+	# Fichier mon_module.py 
+def carre(nb):
+    return nb*nb
+def cube(nb):
+    return nb*nb*nb
 
-  \begin{exemple}
-    \begin{semiverbatim}
-      \only<1-2>{double pi = Math.PI;}
-      \only<3>{double x = Math.abs(y);}
-      \only<4>{double x = Math.cos(y * Math.PI);}
-      \only<5>{int i = (int)Math.floor(Math.E);}
-    \end{semiverbatim}
-  \end{exemple}
+if __name__ == '__main__':
+    # module exécuté en tant que script
+    print('Exemple de la fonction carre()')
+    print('  carre(4) => ', carre(4))
+    print('Exemple de la fonction cube()')
+    print('  cube(3) => ', cube(3))
+
+\end{lstlisting}
+}
+\end{exemple}
+\end{frame}
+
+\begin{frame} [fragile]
+  \frametitle{Utilisation de modules}
+	
+	\begin{exemple}[Les modules]
+	{\small
+  \begin{lstlisting}[frame=none]
+	# Fichier mon_module.py 
+
+# Utilisation du module 
+
+import mon_module      # => n'exécute pas code
+mon_module.carre(3)    # => 9
+mon_module.cube(2)     # => 8
+
+# Exécution du module en tant que script 
+$ python3 mon_module.py   # => affiche ce qui suit :
+  Exemple de la fonction carre()
+    carre(4) =>  16
+  Exemple de la fonction cube()
+    cube(3) =>  27
+
+\end{lstlisting}
+}
+\end{exemple}
 \end{frame}
 
 
-\subsection{Consultation de la documentation}
 
-\begin{frame}
-  \frametitle{API Java}
-  \begin{itemize}
-  \item Toutes les classes de l'API sont documentées
-  \item Apprendre à consulter la documentation
-  \item Les paquetages les plus utiles :
-    \begin{itemize}
-    \item java.lang
-    \item java.util
-    \end{itemize}
-  \end{itemize}
 
-  Accès depuis moodle : \url{https://moodle.ensieta.fr/file.php/1/docs/api/index.html}
+
+
+
+%\section{Retour sur les tableaux}
+%\subsection{Recherche dichotomique}
+%
+%\begin{frame}
+  %\frametitle{Recherche par dichotomie}
+  %\begin{itemize}[<+->]
+  %\item Exemple : recherche d'un élément dans un tableau trié
+  %\item Principe : comparer l'élément avec la valeur médiane
+  %\item puis recommencer dans le sous tableau contenant l'élément
+  %\end{itemize}
+%
+%
+    %\begin{center}
+      %\begin{tabular}{|l|l|l|l|l|}
+        %\hline
+        %{\color<3-4>{blue}1} & {\color<3>{blue}\color<4>{red}2} & {\color<2>{red}\color<3-4>{blue}3} & 4 & 5\\
+        %\hline
+      %\end{tabular}
+    %\end{center}
+%
+%\pause Complexité : \pause $\Theta(\log n)$
+%\end{frame}
+%
+%\subsection{Diviser pour régner}
+%
+%\begin{frame}
+  %\begin{itemize}[<+->]
+  %\item Principe : décomposer le problème en sous problèmes (sous ensemble des
+    %données)
+  %\item résoudre les sous problèmes (éventuellement en redécoupant)
+  %\item puis fusionner les résultats
+  %\item Exemples~:
+    %\begin{itemize}
+    %\item tri par partition/fusion
+    %\item tri rapide
+    %\end{itemize}
+  %\end{itemize}
+%\end{frame}
+%
+%
+
+
 
   %\url{http://172.20.110.1/documentation/jdk1.5.0/api/index.html}
-\end{frame}
+
