--- a/Les_transparent/corps/fonctions.tex
+++ b/Les_transparent/corps/fonctions.tex
@@ -364,7 +364,7 @@ Résultat de l'exécution :
 	\item La recherche d'un nom débute dans l'espace de noms le plus intérieur, puis s'étend jusqu'à l'espace de nom global
   	\begin{itemize}
 		\item Les variables globales sont visibles dans les fonctions appelées mais on ne peut les réaffectées
-		\item Le contenu d'une variable golobale est modifiable si elle est mutable (modifiable).
+		\item Le contenu d'une variable globale est modifiable si elle est mutable (modifiable).
 		\item Les variables locales d'une fonction ne sont pas visibles dans les niveaux supérieurs
 		\item Les fonctions peuvent modifier des variables globales avec l'instruction \emph{global} 
 		\end{itemize}
